@@ -1,3 +1,8 @@
+2010-12-13  Lee Howard <faxguy@howardsilvan.com>
+
+	* tools/tiffcrop.c: new release by Richard Nolde
+	http://bugzilla.maptools.org/show_bug.cgi?id=2004
+
 2010-12-12  Lee Howard <faxguy@howardsilvan.com>
 
 	* tools/tiff2pdf.c: fix colors for images with RGBA 
